# ckanext-package-group-permissions

./: MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
ckanext/package_group_permissions/: helpers.py  plugin.py
ckanext/package_group_permissions/templates/group/snippets/: group_item.html
ckanext/package_group_permissions/templates/package/: group_list.html
ckanext/package_group_permissions/tests/: test_plugin.py
