[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
babel.extractors =
    ckan = ckan.lib.extract:extract_ckan
[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/package_group_permissions/i18n/ckanext-package-group-permissions.pot
width = 80

[init_catalog]
domain = ckanext-giveback
input_file = ckanext/package_group_permissions/i18n/ckanext-package-group-permissions.pot
output_dir = ckanext/package_group_permissions/i18n

[update_catalog]
domain = ckanext-giveback
input_file = ckanext/package_group_permissions/i18n/ckanext-package-group-permissions.pot
output_dir = ckanext/package_group_permissions/i18n
previous = true

[compile_catalog]
domain = ckanext-giveback
directory = ckanext/package_group_permissions/i18n
statistics = true